[package]
name = "rable"
version = "0.1.0"
authors = ["Charles Pierce <cpierce.grad@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "rable"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.2"

[dependencies]
neon = "0.3.2"
